修改 OKbet 改成 OkBet

--- a/fastlane/config.json
+++ b/fastlane/config.json
@@ -5,7 +5,7 @@
         {
             "app_code": "spplat1",
             "appid": "com.happysport.sl.test",
-            "app_name": "OKBET",
+            "app_name": "OkBet",
             "jpush_appKey": "774e6735e1eae46b4b10260f"
         }
     ]
