[調整] 比照h5調整 网银线上 名稱

--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -167,7 +167,7 @@
   },
   {
     "titleNameMap": {
-      "zh": "網銀線上",
+      "zh": "网银线上",
       "en": "Internet Banking",
       "vi": "Ngân hàng trực tuyến"
     },
