--- a/app/build.gradle
+++ b/app/build.gradle
@@ -223,7 +223,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.preference:preference:1.1.1'
@@ -269,7 +269,7 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
 
     //timber
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     //calendar of date range picker
     implementation project(':awesome-calendar')
@@ -297,8 +297,8 @@ dependencies {
 
 
     //極光推送sdk
-    implementation 'cn.jiguang.sdk:jpush-google:4.5.0'
-    implementation 'cn.jiguang.sdk:jcore-google:3.1.2'
+    implementation 'cn.jiguang.sdk:jpush-google:4.6.6'
+    implementation 'cn.jiguang.sdk:jcore-google:3.2.4'
     //implementation 'cn.jiguang.sdk:janalytics:2.1.4'
 
     //room
