--- a/app/build.gradle
+++ b/app/build.gradle
@@ -214,6 +214,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03'
+    implementation 'androidx.webkit:webkit:1.4.0'
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
