[Refactor] 2858 英文文案修改、有些充值渠道名稱在充值提現都會出現，有詢問PM要不要一起改，目前沒得到回覆。(只修改文案部分)

--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -44,7 +44,7 @@
   {
     "titleNameMap": {
       "zh": "虚拟币",
-      "en": "USDT transaction",
+      "en": "USDT Transactions",
       "vi": "Tiền ảo"
     },
     "subtitle": "在线虚拟币支付",
@@ -146,7 +146,7 @@
   {
     "titleNameMap": {
       "zh": "虚拟币转账",
-      "en": "USDT transaction",
+      "en": "USDT Transactions",
       "vi": "Chuyển khoản tiền ảo"
     },
     "subtitle": "虚拟币支付",
