[Add] 3301 線上支付增加類型 Android

--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -178,6 +178,17 @@
   },
   {
     "titleNameMap": {
+      "zh": "Gragon Pay",
+      "en": "Gragon Pay",
+      "vi": "Gragon Pay"
+    },
+    "subtitle": "Gragon Pay",
+    "image": "ic_gragon_pay",
+    "rechType": "onlinePayment",
+    "onlineType": "211"
+  },
+  {
+    "titleNameMap": {
       "zh": "GrabPay",
       "en": "GrabPay",
       "vi": "GrabPay"
