信用盤相關調整

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,7 +136,7 @@ android {
         }
         credit {
             buildConfigField "String", "CHANNEL_NAME", "\"cdplat1\""
-            resValue "string", "app_name", "OkBet"
+            resValue "string", "app_name", "OkBet9"
             applicationId "com.okbet.cdplat1"
             buildConfigField "String", "DEFAULT_LANGUAGE", "\"en\""
             buildConfigField "String", "SYSTEM_CURREMCY", "\"PHP\""
@@ -150,7 +150,7 @@ android {
         }
         spcd {
             buildConfigField "String", "CHANNEL_NAME", "\"spcd\""
-            resValue "string", "app_name", "OkBet"
+            resValue "string", "app_name", "OkBet9"
             applicationId "com.okbet.spcd"
             buildConfigField "String", "DEFAULT_LANGUAGE", "\"en\""
             buildConfigField "String", "SYSTEM_CURREMCY", "\"PHP\""
