--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,10 +168,10 @@ android {
         fastlane.res.srcDirs = ["${fastlane_res_src_dir}"]
         forqa.res.srcDirs = ['src/okbet_ph/res']
         OkbetPH.res.srcDirs = ['src/okbet_ph/res']
-        spcd.res.srcDirs = ['src/okbet_ph/res']
+        spcd.res.srcDirs = ['src/okbet9_ph/res']
         WinbetCN.res.srcDirs = ['src/winbet_cn/res']
         spnew1.res.srcDirs = ['src/okbet_ph/res']
-        credit.res.srcDirs = ['src/okbet_ph/res']
+        credit.res.srcDirs = ['src/okbet9_ph/res']
         main {
             jniLibs.srcDirs = ['src/main/libs']
         }
