--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,8 +148,8 @@ android {
                     NETWORK_SECURITY_CONFIG: "@xml/test_network_security_config"
             ]
         }
-        spcd {
-            buildConfigField "String", "CHANNEL_NAME", "\"spcd\""
+        spk9 {
+            buildConfigField "String", "CHANNEL_NAME", "\"spk9\""
             resValue "string", "app_name", "OKbet9"
             applicationId "com.okbet.spcd"
             buildConfigField "String", "DEFAULT_LANGUAGE", "\"en\""
@@ -168,7 +168,7 @@ android {
         fastlane.res.srcDirs = ["${fastlane_res_src_dir}"]
         forqa.res.srcDirs = ['src/okbet_ph/res']
         OkbetPH.res.srcDirs = ['src/okbet_ph/res']
-        spcd.res.srcDirs = ['src/okbet9_ph/res']
+        spk9.res.srcDirs = ['src/okbet9_ph/res']
         WinbetCN.res.srcDirs = ['src/winbet_cn/res']
         spnew1.res.srcDirs = ['src/okbet_ph/res']
         credit.res.srcDirs = ['src/okbet9_ph/res']
