--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         applicationId "org.cxct.sportlottery"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 5
+        versionCode 32
         versionName "1.0.211"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -411,6 +411,9 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.0.3'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+    implementation 'com.gyf.immersionbar:immersionbar-components:3.0.0'
 
 }
 
