[Add] 在線充值渠道補上在線QQ

--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -57,7 +57,7 @@
       "zh": "在线QQ"
     },
     "subtitle": "QQ在线支付",
-    "image": "money_qqpay_icon",
+    "image": "ic_online_qq",
     "rechType": "onlinePayment",
     "onlineType": "4"
   },
