个人中心兼容改造

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,7 +132,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
-            android:name=".ui.profileCenter.ProfileCenterActivity"
+            android:name=".ui.profileCenter.ProfileCenterFragment"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
