--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
         classpath "com.github.jokar:multi-languages.plugin:0.1.4"
         classpath "org.koin:koin-gradle-plugin:$koin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
