--- a/app/build.gradle
+++ b/app/build.gradle
@@ -411,6 +411,11 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.0.3'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+    implementation 'com.gyf.immersionbar:immersionbar-components:3.0.0'
+    implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
 
 }
 
