--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,9 @@
             android:name=".ui.profileCenter.otherBetRecord.OtherBetRecordActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name="org.cxct.sportlottery.ui.game.detail.SportDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.maintenance.MaintenanceActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
