--- a/app/build.gradle
+++ b/app/build.gradle
@@ -416,6 +416,7 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar-components:3.0.0'
     implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
+    implementation 'com.orhanobut:logger:2.2.0'
 
 }
 
