--- a/app/build.gradle
+++ b/app/build.gradle
@@ -417,6 +417,7 @@ dependencies {
     implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'com.github.promeg:tinypinyin:2.0.3'
 
 }
 
