--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -179,6 +179,9 @@
             android:name=".ui.profileCenter.timezone.TimeZoneActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.sport.LeagueSelectActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.profileCenter.money_transfer.MoneyTransferActivity"
             android:screenOrientation="portrait" /> <!-- 後臺服務-長連線 -->
         <service android:name=".service.BackService" /> <!-- broadCast -->
