1.建议反馈-问题与建议,反馈记录功能完成 2.历史记录功能80%完成后续UI修改 3.常见问题完成

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,4 @@ fastlane_jpush_permission=
 fastlane_security_config=
 fastlane_res_src_dir=
 fastlane_executor=gradle
+android.injected.testOnly=false
