OK-638 "USDT Transaction"改为"USDT"

--- a/app/src/main/assets/MoneyConfigs/RechargeConfig.json
+++ b/app/src/main/assets/MoneyConfigs/RechargeConfig.json
@@ -146,7 +146,7 @@
   {
     "titleNameMap": {
       "zh": "虚拟币转账",
-      "en": "USDT Transactions",
+      "en": "USDT",
       "vi": "Chuyển khoản tiền ảo"
     },
     "subtitle": "虚拟币支付",
