--- a/app/build.gradle
+++ b/app/build.gradle
@@ -420,6 +420,14 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'com.github.promeg:tinypinyin:2.0.3'
+    //adjust 第三方统计
+    implementation 'com.adjust.sdk:adjust-android:4.32.0'
+    implementation 'com.android.installreferrer:installreferrer:2.2'
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
+    implementation 'com.android.installreferrer:installreferrer:2.2'
+    //appsflyer
+    implementation 'com.appsflyer:af-android-sdk:6.9.0'
+    implementation "com.miui.referrer:homereferrer:1.0.0.6"
 
 }
 
