--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
     <uses-permission android:name="android.webkit.resource.VIDEO_CAPTURE" />
     <uses-permission android:name="android.webkit.resource.AUDIO_CAPTURE" />
     <uses-permission android:name="android.permission.MICROPHONE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 
     <uses-feature
         android:name="android.hardware.microphone"
