--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -201,8 +201,13 @@
         <activity
             android:name=".ui.profileCenter.money_transfer.MoneyTransferActivity"
             android:screenOrientation="portrait" /> <!-- 後臺服務-長連線 -->
-        <activity android:name=".ui.profileCenter.cancelaccount.CancelAccountActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.profileCenter.cancelaccount.CancelAccountActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.maintab.menu.SettingCenterActivity"
+            android:screenOrientation="portrait" />
+
         <service android:name=".service.BackService" /> <!-- broadCast -->
         <receiver
             android:name=".service.ServiceBroadcastReceiver"
