--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:networkSecurityConfig="${NETWORK_SECURITY_CONFIG}"
+        android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
