关于我们页面修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -208,7 +208,9 @@
         <activity
             android:name=".ui.maintab.menu.SettingCenterActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".ui.aboutMe.AboutMeActivity"
+            android:screenOrientation="portrait" />
         <service android:name=".service.BackService" /> <!-- broadCast -->
         <receiver
             android:name=".service.ServiceBroadcastReceiver"
