处理首页部分tab顶部偏移问题

--- a/stomp_protocol_android/build.gradle
+++ b/stomp_protocol_android/build.gradle
@@ -19,7 +19,7 @@ repositories {
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 //apply plugin: 'groovyx.android'
 
 group='com.github.NaikSoftware'
