删除无效资源文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
 
     defaultConfig {
         ndk {
-            abiFilters 'arm64-v8a', 'armeabi-v7a', 'armeabi', 'x86','x86_64'
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'armeabi' /*, 'x86','x86_64'*/\
         }
         applicationId "org.cxct.sportlottery"
         minSdkVersion 23
