足球成功下注后，弹窗去掉“取消”按钮

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -364,6 +364,11 @@ ext {
 }
 
 dependencies {
+
+//    debugImplementation 'com.letv.sarrsdesktop:BlockCanaryExJRT:0.9.9.4'
+//    releaseImplementation 'com.letv.sarrsdesktop:BlockCanaryExJRTNoOp:0.9.9.4'
+//    testImplementation 'com.letv.sarrsdesktop:BlockCanaryExJRTNoOp:0.9.9.4'
+
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03'
