--- a/gradle.properties
+++ b/gradle.properties
@@ -1,34 +1,30 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
+## For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
-android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
+#Mon Nov 07 14:32:54 PST 2022
 android.enableJetifier=true
-# Kotlin code style for this project: "official" or "obsolete":
-kotlin.code.style=official
-fastlane_version_name=
-fastlane_version_code=1
+android.injected.testOnly=false
+android.useAndroidX=true
 fastlane_app_code=
 fastlane_app_name=
 fastlane_application_id=
+fastlane_executor=gradle
 fastlane_jpush_appkey=
 fastlane_jpush_channel=
-fastlane_jpush_provider=
 fastlane_jpush_permission=
-fastlane_security_config=
+fastlane_jpush_provider=
 fastlane_res_src_dir=
-fastlane_executor=gradle
-android.injected.testOnly=false
+fastlane_security_config=
+fastlane_version_code=1
+fastlane_version_name=
+kotlin.code.style=official
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
