--- a/app/build.gradle
+++ b/app/build.gradle
@@ -344,6 +344,13 @@ android {
             //強制改寫 apk 輸出路徑, ex: ..\app\build/outputs/releaseAPK
             //方便不同平台的 apk 可以在同一層級的資料夾整理
 //            variant.getPackageApplication().outputDirectory = new File(project.buildDir.absolutePath + "/outputs/releaseAPK")
+        } else {
+            variant.outputs.all { output ->
+                def name = fastlane_app_code == "" ? variant.flavorName : fastlane_app_code
+                def date = new SimpleDateFormat("MMddHHmm").format(new Date())
+                //outputFileName = name + '_' + getVersionCode() + '_' + getVersionName() + '_' + date + '.apk'
+                outputFileName = name + '_' + getVersionName() + '_' + date + '.apk'
+            }
         }
     }
 
