--- a/app/build.gradle
+++ b/app/build.gradle
@@ -375,6 +375,9 @@ dependencies {
 //    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
 //    releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
 
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+
+
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03'
