--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "29.0.3"
 
     defaultConfig {
@@ -20,7 +20,7 @@ android {
         }
         applicationId "org.cxct.sportlottery"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionName "1.1.19"
         versionCode 42
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -526,6 +526,7 @@ dependencies {
     //appsflyer
     implementation 'com.appsflyer:af-android-sdk:6.9.0'
     implementation "com.miui.referrer:homereferrer:1.0.0.6"
+    implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.3.4-release-jitpack'
 }
 
 repositories {
