--- a/app/build.gradle
+++ b/app/build.gradle
@@ -373,7 +373,7 @@ ext {
 
 dependencies {
 
-//    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
+    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
 //    releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
 
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
