--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "29.0.3"
+//    buildToolsVersion "29.0.3"
 
     defaultConfig {
         ndk {
@@ -373,9 +373,9 @@ ext {
 
 dependencies {
 
-    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
+//    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
 //    releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
-
+//
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
 
 
@@ -390,7 +390,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.3fdsa ΩΩ.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
