--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         }
         applicationId "org.cxct.sportlottery"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 30
         versionName "1.1.20"
         versionCode 43
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -377,6 +377,9 @@ dependencies {
 //    releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
 //
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+
+    debugImplementation 'io.github.didi.dokit:dokitx:3.5.0.1'
+    releaseImplementation 'io.github.didi.dokit:dokitx-no-op:3.5.0.1'
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
